--- a/4week/demos/cybersecurity-demo/bcrypt-demo-template/package.json
+++ b/4week/demos/cybersecurity-demo/bcrypt-demo-template/package.json
@@ -6,7 +6,7 @@
   "name": "bcrypt-demo-template",
   "description": "",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server/index.js",
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
