--- a/4week/demos/cybersecurity-demo/bcrypt-demo-template/package.json
+++ b/4week/demos/cybersecurity-demo/bcrypt-demo-template/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.3"
   },
@@ -7,7 +8,6 @@
   "description": "",
   "version": "1.0.0",
   "main": "server/index.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
