--- a/6week/afternoon-assignments/automation/google/package.json
+++ b/6week/afternoon-assignments/automation/google/package.json
@@ -15,7 +15,9 @@
     "@types/selenium-webdriver": "^4.0.12",
     "chromedriver": "^100.0.0",
     "geckodriver": "^1.22.3",
-    "jest": "^26.6.3",
     "selenium-webdriver": "^4.0.0-beta.3"
+  },
+  "devDependencies": {
+    "jest": "^28.0.1"
   }
 }
