--- a/6week/afternoon-assignments/automation/movieList/package.json
+++ b/6week/afternoon-assignments/automation/movieList/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "@types/jest": "^26.0.15",
     "@types/selenium-webdriver": "^4.0.12",
-    "chromedriver": "^95.0.0",
+    "chromedriver": "^100.0.0",
     "geckodriver": "^1.22.3",
-    "jest": "^26.6.3",
     "selenium-webdriver": "^4.0.0-beta.3"
-}
+  },
+  "devDependencies": {
+    "jest": "^28.0.1"
+  }
 }
