--- a/6week/afternoon-assignments/deployment/package.json
+++ b/6week/afternoon-assignments/deployment/package.json
@@ -1,11 +1,8 @@
 {
-  "dependencies": {
-    "express": "^4.18.0"
-  },
   "name": "deployment",
   "version": "1.0.0",
+  "description": "",
   "main": "server/index.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/index.js"
@@ -13,5 +10,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "dependencies": {
+    "express": "^4.18.0"
+  }
 }
