--- a/design-practice/rAnds/package.json
+++ b/design-practice/rAnds/package.json
@@ -1,10 +1,7 @@
 {
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.0"
-  },
-  "name": "rands",
+  "name": "deployment",
   "version": "1.0.0",
+  "description": "",
   "main": "server/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -13,5 +10,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "dependencies": {
+    "express": "^4.18.0"
+  }
 }
